syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "MamangRust/paymentgatewaygrpc/internal/pb";

message User {
    string id = 1;
    string firstname = 2;
    string lastname = 3;
    string email = 4;
    string noc_transfer = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message UsersRequest {

}

message UserResponse {
    User user = 1;
}

message UsersResponse {
    repeated User users = 1;
}

message CreateUserRequest {
    string firstname = 1;
    string lastname = 2;
    string email = 3;
    string password = 4;
    string confirm_password = 5;
}

message UpdateUserRequest {
    int32 id = 1;
    string firstname = 2;
    string lastname = 3;
    string email = 4;
    string password = 5;
    string confirm_password = 6;
}

message UserRequest {
    int32 id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (UserResponse) {}
    rpc GetUsers(google.protobuf.Empty) returns (UsersResponse) {}
    rpc GetUser(UserRequest) returns (UserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {}
    rpc DeleteUser(UserRequest) returns (DeleteUserResponse) {}
}
